# Desktop-Server-School-Platform

./: .dockerignore  .env  .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  README-DESKTOP-SERVER.md  README.md  RELEASE_GUIDE.md  check-instructors.js  check-learning-paths.js  deploy_url.txt  final-verification.js  package-lock.json  package.json  test-landing.js  tsconfig.desktop.json  turbo.json  verify-lessons.js  vitest.config.ts  workspace.json
.next/: app-build-manifest.json  build-manifest.json  trace
INR99.Academy/: README-WHITELABEL.md  README.md  course-list.md  deploy_url.txt  package.json  workspace.json
deploy-clean/: server.js
deployment/: README.md  entrypoint.sh  healthcheck.sh  loki-config.yml  nginx.conf  prometheus.yml
docker/: socket-server.js
docs/: category-expansion-summary.md  whitelabel-school-flow.md
prisma/: add-all-lessons.ts  add-english-course.ts  add-indian-constitution.ts  add-more-lessons.ts  add-public-speaking-course.ts  add-webdev-bootcamp.ts  add-webdev-modules-11-16.ts  analyze-lessons.ts  check-frm-part1-courses.ts  check-us-cma-part2-courses.js  check-us-cpa-course.js  check-webdev-courses.ts  cleanup-us-cpa.js  continue-ssc-chsl-seeding.ts  continue-state-police-seeding.ts  create-advanced-answer-writing-mastery.ts  create-advanced-trading-course.ts  create-commerce-basics-course.ts  create-cs-foundation-course.ts  populate-courses.ts  (+41 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.config.dev.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs
(+318 files in other folders)
